--- a/src/components/TimeFlow/timeflow.css
+++ b/src/components/TimeFlow/timeflow.css
@@ -64,29 +64,6 @@
   }
 }
 
-.sidebar-button {
-  background-color: rgb(24, 24, 24);
-
-  &:hover,
-  &:focus {
-    background-color: rgb(29, 38, 52);
-  }
-
-  &.sidebar-selected {
-    &:hover {
-      background-color: rgba(0, 115, 255, 0.8);
-    }
-    &:focus {
-      background-color: rgb(0, 115, 255);
-    }
-  }
-
-  &:active {
-    background-color: rgb(0, 115, 255);
-  }
-
-}
-
 .sidebar-add {
   background-color: rgba(148, 63, 60, 0.4);
 
@@ -104,21 +81,47 @@
   }
 }
 
-.sidebar-selected {
-  background-color: rgb(0, 115, 255);
-  border-radius: 45%;
-  /* border-radius: 24px; */
-}
-
-.sidebar-add-selected {
-  background-color: rgb(148, 63, 60);
-  border-radius: 45%;
-  /* border-radius: 24px; */
-}
-
 a {
   text-decoration: none;
   color: inherit;
+}
+
+@media (prefers-color-scheme: dark) { 
+  .sidebar-selected {
+    background-color: rgb(0, 115, 255);
+    border-radius: 45%;
+    /* border-radius: 24px; */
+  }
+  
+  .sidebar-add-selected {
+    background-color: rgb(148, 63, 60);
+    border-radius: 45%;
+    /* border-radius: 24px; */
+  }
+
+  .sidebar-button {
+    background-color: rgb(24, 24, 24);
+  
+    &:hover,
+    &:focus {
+      background-color: rgb(29, 38, 52);
+    }
+  
+    &.sidebar-selected {
+      &:hover {
+        background-color: rgba(0, 115, 255, 0.8);
+      }
+      &:focus {
+        background-color: rgb(0, 115, 255);
+      }
+    }
+  
+    &:active {
+      background-color: rgb(0, 115, 255);
+    }
+  
+  }
+
 }
 
 @media (prefers-color-scheme: light) {
