--- a/src/components/TimeFlow/timeflow.css
+++ b/src/components/TimeFlow/timeflow.css
@@ -11,6 +11,16 @@
   border-right: 1px solid #1f1f1f;
 }
 
+.titlebar {
+  height: 32px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  -webkit-app-region: drag;
+}
+
 .sidebar-buttons {
   display: flex;
   flex-direction: column;
