--- a/src/components/update/ListView/listview.css
+++ b/src/components/update/ListView/listview.css
@@ -2,15 +2,14 @@
   display: flex;
   flex-direction: row;
   align-items: left;
-  /* width: calc(100vw - 96px - 90px); */
   padding-top: 16px;
   padding-bottom: 16px;
   padding-right: 16px;
   list-style: none;
   border-radius: 16px;
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: rgba(255, 255, 255, 0.025);
+  border: 1px solid rgba(255, 255, 255, 0.08);
   transition: background-color 0.25s;
-  /* margin-bottom: 10px; */
   .bi-trash3-fill {
     margin-left: 16px;
   }
@@ -26,8 +25,8 @@
 }
 
 .list-view-item:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  box-shadow: 0px 4px 16px -4px rgba(0, 0, 0, 0.25);
+  background-color: rgba(255, 255, 255, 0.05);
+  box-shadow: 0px 4px 16px -4px rgba(0, 0, 0, 0.1);
   scale: 1.001;
   transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
 }
@@ -35,8 +34,8 @@
 .list-view-item-left {
   flex: 0 0 auto;
   padding-left: 20px;
-  padding-right: 20px;
   padding-top: 8px;
+  width: 40px;
 }
 
 .list-view-item-right {
@@ -85,26 +84,11 @@
   background-color: rgba(255, 255, 255, 0.08);
 }
 
-.list-view-item {
-  /* background-color: transparent; */
-  background-color: rgba(255, 255, 255, 0.025);
-  border: 1px solid rgba(255, 255, 255, 0.08);
-}
-
-.list-view-item:hover {
-  background-color: rgba(255, 255, 255, 0.05);
-  box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
-}
-
 .list-view-container {
   display: grid;
   grid-gap: 10px;
   width: calc(100% - 64px);
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
-}
-
-.container {
-  margin: 0 auto;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
 }
 
 .round {
