--- a/src/components/update/ListView/listview.css
+++ b/src/components/update/ListView/listview.css
@@ -28,7 +28,10 @@
   background-color: rgba(255, 255, 255, 0.05);
   box-shadow: 0px 4px 16px -4px rgba(0, 0, 0, 0.1);
   scale: 1.001;
-  transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+  transition:
+    background-color 0.25s,
+    box-shadow 0.25s,
+    scale 0.25s;
 }
 
 .list-view-item-left {
