--- a/src/components/update/Sidebar/sidebar.css
+++ b/src/components/update/Sidebar/sidebar.css
@@ -1,65 +1,67 @@
 .sidebar {
-    width: 64px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 4rem 1rem 1rem 1rem;
-    height: 100vh;
-    overflow: hidden;
+  width: 64px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4rem 1rem 1rem 1rem;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .sidebar-button {
-    width: 64px;
-    height: 64px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    border: none;
-    border-radius: 50%;
-    margin-bottom: 1rem;
-    transition: all 0.25s;
+  width: 64px;
+  height: 64px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  margin-bottom: 1rem;
+  transition: all 0.25s;
 
-    &:hover, &:active, &:focus {
-        border-radius: 45%;
-        outline: none;
-    }
+  &:hover,
+  &:active,
+  &:focus {
+    border-radius: 45%;
+    outline: none;
+  }
 
-    &:hover {
-        background-color: rgba(255, 255, 255, 0.1);
-    }
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
 
-    &:active {
-        background-color: rgb(0, 115, 255);
-    }
+  &:active {
+    background-color: rgb(0, 115, 255);
+  }
 
-    &:focus {
-        background-color: rgb(0, 115, 255);
-    }
+  &:focus {
+    background-color: rgb(0, 115, 255);
+  }
 }
 
 .sidebar-add {
-    background-color: rgba(148, 63, 60, 0.6) !important;
+  background-color: rgba(148, 63, 60, 0.6) !important;
 
-    &:hover {
-        background-color: rgba(148, 63, 60, 0.8) !important;
-    }
+  &:hover {
+    background-color: rgba(148, 63, 60, 0.8) !important;
+  }
 
-    &:active {
-        background-color: rgb(148, 63, 60) !important;
-    }
+  &:active {
+    background-color: rgb(148, 63, 60) !important;
+  }
 
-    &:focus {
-        background-color: rgb(148, 63, 60) !important;
-    }
+  &:focus {
+    background-color: rgb(148, 63, 60) !important;
+  }
 }
 
 .sidebar-selected {
-    background-color: rgb(0, 115, 255);
-    border-radius: 45%;
+  background-color: rgb(0, 115, 255);
+  border-radius: 45%;
 }
 
 .sidebar-add-selected {
-    background-color: rgb(148, 63, 60) !important;
-    border-radius: 45%;
+  background-color: rgb(148, 63, 60) !important;
+  border-radius: 45%;
 }
