--- a/src/components/update/TaskDetails/taskDetails.css
+++ b/src/components/update/TaskDetails/taskDetails.css
@@ -14,7 +14,10 @@ button:hover {
   border: 1px solid rgba(255, 255, 255, 0.08);
   box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.05);
   scale: 1.001;
-  transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+  transition:
+    background-color 0.25s,
+    box-shadow 0.25s,
+    scale 0.25s;
 }
 
 /* light mode */
@@ -25,7 +28,7 @@ button:hover {
     background-color: rgb(0, 0, 0, 0.025) !important;
     border: 1px solid rgba(0, 0, 0, 0.08) !important;
   }
-  
+
   select:hover,
   select#labels:hover,
   select#priority:hover,
@@ -34,7 +37,9 @@ button:hover {
     border: 1px solid rgba(0, 0, 0, 0.08);
     box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.05);
     scale: 1.001;
-    transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+    transition:
+      background-color 0.25s,
+      box-shadow 0.25s,
+      scale 0.25s;
   }
-  
 }
