--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,9 @@ input {
   font-family: inherit;
   background-color: rgba(255, 255, 255, 0.025);
   cursor: pointer;
-  transition: border-color, background-color 0.2s ease-in-out;
+  transition:
+    border-color,
+    background-color 0.2s ease-in-out;
   outline: none;
   &:hover {
     background-color: rgba(255, 255, 255, 0.05);
@@ -64,7 +66,10 @@ button:active {
   border: 1px solid rgba(255, 255, 255, 0.08);
   box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
   scale: 1.001;
-  transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+  transition:
+    background-color 0.25s,
+    box-shadow 0.25s,
+    scale 0.25s;
 }
 
 input:focus,
@@ -118,7 +123,10 @@ code {
     border: 1px solid rgba(0, 0, 0, 0.08);
     box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
     scale: 1.001;
-    transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+    transition:
+      background-color 0.25s,
+      box-shadow 0.25s,
+      scale 0.25s;
   }
 
   input:focus {
