--- a/src/pages/Add/add.css
+++ b/src/pages/Add/add.css
@@ -110,7 +110,10 @@
       background-color: rgb(255, 255, 255) !important;
       box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.05) !important;
       scale: 1.001;
-      transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
+      transition:
+        background-color 0.25s,
+        box-shadow 0.25s,
+        scale 0.25s;
     }
   }
 
