--- a/src/index.css
+++ b/src/index.css
@@ -46,13 +46,8 @@ input {
   font-family: inherit;
   background-color: rgba(255, 255, 255, 0.025);
   cursor: pointer;
-  transition:
-    border-color,
-    background-color 0.2s ease-in-out;
+  transition: border-color, background-color 0.2s ease-in-out;
   outline: none;
-  &:hover {
-    background-color: rgba(255, 255, 255, 0.05);
-  }
 }
 
 input:hover,
@@ -62,19 +57,11 @@ button:focus,
 input:active,
 button:active {
   outline: none;
-  border: none;
-  border: 1px solid rgba(255, 255, 255, 0.08);
-  box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
-  scale: 1.001;
-  transition:
-    background-color 0.25s,
-    box-shadow 0.25s,
-    scale 0.25s;
-}
-
-input:focus,
-button:focus {
-  background-color: rgba(255, 255, 255, 0.1) !important;
+  background-color: rgba(255, 255, 255, 0.05) !important;
+  border: 1px solid rgba(255, 255, 255, 0.08) !important;
+  box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1) !important;
+  scale: 1.0025 !important;
+  transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
 }
 
 input {
@@ -104,12 +91,9 @@ code {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
+
   input,
   button {
-    /* background-color: rgb(255, 255, 255); */
     background-color: rgb(0, 0, 0, 0.025);
     border: 1px solid rgba(0, 0, 0, 0.08);
   }
@@ -120,17 +104,11 @@ code {
   button:focus,
   input:active,
   button:active {
-    border: 1px solid rgba(0, 0, 0, 0.08);
+    border: 1px solid rgba(0, 0, 0, 0.08) !important;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
-    scale: 1.001;
-    transition:
-      background-color 0.25s,
-      box-shadow 0.25s,
-      scale 0.25s;
-  }
-
-  input:focus {
-    background-color: rgb(255, 255, 255) !important;
+    scale: 1.0025;
+    transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
   }
 
   code {
