--- a/src/components/update/TaskDetails/taskDetails.css
+++ b/src/components/update/TaskDetails/taskDetails.css
@@ -14,10 +14,7 @@ button:hover {
   border: 1px solid rgba(255, 255, 255, 0.08);
   box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.05);
   scale: 1.0025;
-  transition:
-    background-color 0.25s,
-    box-shadow 0.25s,
-    scale 0.25s;
+  transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
 }
 
 /* light mode */
@@ -37,9 +34,6 @@ button:hover {
     border: 1px solid rgba(0, 0, 0, 0.08);
     box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.05);
     scale: 1.0025;
-    transition:
-      background-color 0.25s,
-      box-shadow 0.25s,
-      scale 0.25s;
+    transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
   }
 }
