--- a/src/components/TimeFlow/timeflow.css
+++ b/src/components/TimeFlow/timeflow.css
@@ -1,35 +1,20 @@
 .sidebar {
-  width: 63px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem 1rem 1rem 1rem;
-  height: 100%;
-  overflow: hidden;
-  background-color: #121212;
-  border-right: 1px solid #1f1f1f;
-}
+  border-color: #1f1f1f;
+  background-color: #101112;
 
-.icon-text-container {
-  display: flex;
-  align-items: center;
-  gap: 10px; /* Adjust the space between icon and text */
+  @apply h-full p-4 pt-20 overflow-hidden align-middle justify-between flex-col flex w-[63px] border-solid border-l-0 border-t-0 border-b-0 border-r;
 }
 
 .sidebar-button,
 .sidebar-add {
   width: 64px;
   height: 64px;
-  /* width: 100%; */
-  /* height: 48px; */
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  border: none !important;
+  border: none;
   border-radius: 50%;
-  /* border-radius: 32px; */
   margin-bottom: 1rem;
   transition: all 0.25s;
 
@@ -58,7 +43,7 @@
 
   &:hover,
   &:focus {
-    background-color: rgba(148, 63, 60, 0.8) !important;
+    background-color: rgba(148, 63, 60, 0.8);
   }
 
   &:active {
