--- a/src/components/update/TaskDetails/taskDetails.css
+++ b/src/components/update/TaskDetails/taskDetails.css
@@ -22,8 +22,8 @@ button:hover {
   select,
   select#labels,
   select#priority {
-    background-color: rgb(0, 0, 0, 0.025) !important;
-    border: 1px solid rgba(0, 0, 0, 0.08) !important;
+    background-color: rgb(0, 0, 0, 0.025);
+    border: 1px solid rgba(0, 0, 0, 0.08);
   }
 
   select:hover,
