--- a/src/index.css
+++ b/src/index.css
@@ -57,10 +57,10 @@ button:focus,
 input:active,
 button:active {
   outline: none;
-  background-color: rgba(255, 255, 255, 0.05) !important;
-  border: 1px solid rgba(255, 255, 255, 0.08) !important;
-  box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1) !important;
-  scale: 1.0025 !important;
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
+  scale: 1.0025;
   transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
 }
 
@@ -104,7 +104,7 @@ code {
   button:focus,
   input:active,
   button:active {
-    border: 1px solid rgba(0, 0, 0, 0.08) !important;
+    border: 1px solid rgba(0, 0, 0, 0.08);
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
     scale: 1.0025;
