--- a/src/pages/Account/account.css
+++ b/src/pages/Account/account.css
@@ -21,7 +21,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: calc(100% - 52px);
   padding-bottom: 16px;
   padding-top: 24px;
   border-radius: 16px;
