--- a/src/pages/Add/add.css
+++ b/src/pages/Add/add.css
@@ -107,8 +107,8 @@
     select#labels:hover,
     select#priority:hover,
     button:hover {
-      background-color: rgb(255, 255, 255) !important;
-      box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.05) !important;
+      background-color: rgb(255, 255, 255);
+      box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.05);
       scale: 1.0025;
       transition:
         background-color 0.25s,
