--- a/src/components/update/NoItems/noitems.css
+++ b/src/components/update/NoItems/noitems.css
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.25); /* Semi-transparent background */
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px) saturate(0.8);
   display: flex;
   justify-content: center;
   align-items: center;
