--- a/src/index.css
+++ b/src/index.css
@@ -36,32 +36,43 @@ h1 {
   line-height: 1.1;
 }
 
-button,
-input {
-  border-radius: 16px;
-  border: 1px solid rgba(255, 255, 255, 0.08);
+.btn,
+.bin-btn,
+.search-input {
+  border: rgba(255, 255, 255, 0.08);
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: rgba(255, 255, 255, 0.025);
-  cursor: pointer;
-  transition: border-color, background-color 0.2s ease-in-out;
-  outline: none;
+  color: inherit;
+
+  @apply transition-all duration-200 ease-in-out border border-solid outline-none cursor-pointer;
 }
 
-input:hover,
-button:hover,
-input:focus,
-button:focus,
-input:active,
-button:active {
-  outline: none;
+.btn,
+.search-input {
+  @apply rounded-2xl;
+}
+
+.search-input {
+  @apply py-3;
+}
+
+.bin-btn {
+  @apply rounded-lg;
+}
+
+.btn:hover,
+.btn:focus,
+.btn:active,
+.search-input:hover,
+.search-input:focus,
+.search-input:active {
   background-color: rgba(255, 255, 255, 0.05);
   border: 1px solid rgba(255, 255, 255, 0.08);
   box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
   scale: 1.0025;
-  transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
 }
 
 input {
@@ -92,23 +103,22 @@ code {
     background-color: #ffffff;
   }
 
-  input,
-  button {
+  .btn,
+  .bin-btn,
+  .search-input {
     background-color: rgb(0, 0, 0, 0.025);
     border: 1px solid rgba(0, 0, 0, 0.08);
   }
 
-  input:hover,
-  button:hover,
-  input:focus,
-  button:focus,
-  input:active,
-  button:active {
+  .btn:hover,
+  .btn:focus,
+  .btn:active,
+  .search-input:hover,
+  .search-input:focus,
+  .search-input:active {
     border: 1px solid rgba(0, 0, 0, 0.08);
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 4px 16px -2px rgba(0, 0, 0, 0.1);
-    scale: 1.0025;
-    transition: background-color 0.25s, box-shadow 0.25s, scale 0.25s;
   }
 
   code {
