--- a/src/components/update/ListView/listview.css
+++ b/src/components/update/ListView/listview.css
@@ -1,5 +1,5 @@
 .list-view-item {
-  @apply flex flex-row pt-4 pb-4 pr-4 list-none transition-all duration-200 ease-in-out border rounded-2xl bg-zinc-800 border-zinc-700;
+  @apply flex flex-row pt-4 pb-4 pr-4 list-none transition-all duration-200 ease-in-out border rounded-2xl;
   background-color: rgba(255, 255, 255, 0.025);
   border: 1px solid rgba(255, 255, 255, 0.08);
   .bi-trash3-fill {
